Add header and Mission section.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,23 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link href="./resources/css/style.css." type="text/css" rel="stylesheet">
     <title>Tea Cozy</title>
   </head>
   <body>
-
+<header>
+<img src="resources\images\img-tea-cozy-logo.png">
+<nav>
+<span><a href="#mission">Mission</a></span>
+<span><a href="#tea">Featured Tea</a></span>
+<span><a href="#locations">Locations</a></span>
+</nav>
+</header>
+<div id="mission">
+<div class="missiontext">
+<h2>Our Mission</h2>
+<h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+</div>
+</div>
   </body>
 </html>
