--- a/index.html
+++ b/index.html
@@ -20,5 +20,34 @@
 <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
 </div>
 </div>
+<div id="tea">
+<div class="tea-h">
+  <h2>Tea of the Month</h2>
+<h4>What's Steeping at The Tea Cozy</h4>
+</div>
+<div class="tea-images">
+<div class="fall-berry">
+<img src="resources\images\img-berryblitz.jpg" alt="Fall Berry Blitz Tea" width="300px" height="200px">
+<h4>Fall Berry Blitz Tea</h4>
+</div>
+<div class="spiced-rum">
+<img src="resources\images\img-spiced-rum.jpg" alt="Spiced Rum Tea" width="300px" height="200px">
+<h4>Spiced Rum Tea</h4>
+</div>
+<div class="seasonal-donuts">
+<img src="resources\images\img-donut.jpg" alt="Seasonal Donuts" width="300px" height="200px">
+<h4>Seasonal Donuts</h4>
+</div>
+<div class="myrtle-tea">
+<img src="resources\images\img-myrtle-ave.jpg" alt="Myrtle Ave Tea" width="300px" height="200px">
+<h4>Myrtle Ave Tea</h4>
+</div>
+<div class="bedford-tea">
+<img src="resources\images\img-bedford-bizarre.jpg" alt="Bedford Bizarre Tea" width="300px" height="200px">
+<h4>Bedford Bizarre Tea</h4>
+</div>
+</div>
+</div>
+
   </body>
 </html>
