--- a/index.html
+++ b/index.html
@@ -48,6 +48,28 @@
 </div>
 </div>
 </div>
-
+<div id="locations">
+  <h2>Locations</h2>
+<div class="loc-boxes">
+<div class="downtown box">
+<h3>Downtown</h3>
+<p>384 West 4th St</p>
+<p>Suite 108</p>
+<p>Portland, Maine</p>
+</div>
+<div class="eastbayside box">
+  <h3>East Bayside</h3>
+  <p>3433 Phisherman's Avenue</p>
+  <p>(Northwest Corner)</p>
+  <p>Portland, Maine</p>
+</div>
+<div class="oakdale box">
+  <h3>Oakland</h3>
+  <p>515 Crescent Avenue</p>
+  <p>Second Floor</p>
+  <p>Portland, Maine</p>
+</div>
+</div>
+</div>
   </body>
 </html>
