--- a/index.html
+++ b/index.html
@@ -2,82 +2,82 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link href="./resources/css/style.css." type="text/css" rel="stylesheet">
+    <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
     <title>Tea Cozy</title>
   </head>
   <body>
-<header>
-<img src="resources\images\img-tea-cozy-logo.png">
-<nav>
-<span><a href="#mission">Mission</a></span>
-<span><a href="#tea">Featured Tea</a></span>
-<span><a href="#locations">Locations</a></span>
-</nav>
-</header>
-<div id="mission">
-<div class="missiontext">
-<h2>Our Mission</h2>
-<h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
-</div>
-</div>
-<div id="tea">
-<div class="tea-h">
-  <h2>Tea of the Month</h2>
-<h4>What's Steeping at The Tea Cozy</h4>
-</div>
-<div class="tea-images">
-<div class="fall-berry">
-<img src="resources\images\img-berryblitz.jpg" alt="Fall Berry Blitz Tea" width="300px" height="200px">
-<h4>Fall Berry Blitz Tea</h4>
-</div>
-<div class="spiced-rum">
-<img src="resources\images\img-spiced-rum.jpg" alt="Spiced Rum Tea" width="300px" height="200px">
-<h4>Spiced Rum Tea</h4>
-</div>
-<div class="seasonal-donuts">
-<img src="resources\images\img-donut.jpg" alt="Seasonal Donuts" width="300px" height="200px">
-<h4>Seasonal Donuts</h4>
-</div>
-<div class="myrtle-tea">
-<img src="resources\images\img-myrtle-ave.jpg" alt="Myrtle Ave Tea" width="300px" height="200px">
-<h4>Myrtle Ave Tea</h4>
-</div>
-<div class="bedford-tea">
-<img src="resources\images\img-bedford-bizarre.jpg" alt="Bedford Bizarre Tea" width="300px" height="200px">
-<h4>Bedford Bizarre Tea</h4>
-</div>
-</div>
-</div>
-<div id="locations">
-  <h2>Locations</h2>
-<div class="loc-boxes">
-<div class="downtown box">
-<h3>Downtown</h3>
-<p>384 West 4th St</p>
-<p>Suite 108</p>
-<p>Portland, Maine</p>
-</div>
-<div class="eastbayside box">
-  <h3>East Bayside</h3>
-  <p>3433 Phisherman's Avenue</p>
-  <p>(Northwest Corner)</p>
-  <p>Portland, Maine</p>
-</div>
-<div class="oakdale box">
-  <h3>Oakland</h3>
-  <p>515 Crescent Avenue</p>
-  <p>Second Floor</p>
-  <p>Portland, Maine</p>
-</div>
-</div>
-</div>
-<div class="contact">
-<h2>The Tea Cozy</h2>
-<h5>contact@theteacozy.com</h5>
-<h5>917-555-8904</h5>
-</div>
-<div class="copy">
-<h5>copyright The Tea Cozy 2017</h5>
-</div>
+    <header>
+      <img src="./resources/images/img-tea-cozy-logo.png" alt="logo">
+      <nav>
+        <span><a href="#mission">Mission</a></span>
+        <span><a href="#tea">Featured Tea</a></span>
+        <span><a href="#locations">Locations</a></span>
+      </nav>
+    </header>
+    <div id="mission">
+      <div class="missiontext">
+        <h2>Our Mission</h2>
+        <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+      </div>
+    </div>
+    <div id="tea">
+      <div class="tea-h">
+        <h2>Tea of the Month</h2>
+        <h4>What's Steeping at The Tea Cozy</h4>
+      </div>
+      <div class="tea-images">
+        <div class="fall-berry">
+          <img src="./resources/images/img-berryblitz.jpg" alt="Fall Berry Blitz Tea" width="300" height="200">
+          <h4>Fall Berry Blitz Tea</h4>
+        </div>
+        <div class="spiced-rum">
+          <img src="./resources/images/img-spiced-rum.jpg" alt="Spiced Rum Tea" width="300" height="200">
+          <h4>Spiced Rum Tea</h4>
+        </div>
+        <div class="seasonal-donuts">
+          <img src="./resources/images/img-donut.jpg" alt="Seasonal Donuts" width="300" height="200">
+          <h4>Seasonal Donuts</h4>
+        </div>
+        <div class="myrtle-tea">
+          <img src="./resources/images/img-myrtle-ave.jpg" alt="Myrtle Ave Tea" width="300" height="200">
+          <h4>Myrtle Ave Tea</h4>
+        </div>
+        <div class="bedford-tea">
+          <img src="./resources/images/img-bedford-bizarre.jpg" alt="Bedford Bizarre Tea" width="300" height="200">
+          <h4>Bedford Bizarre Tea</h4>
+        </div>
+      </div>
+    </div>
+    <div id="locations">
+      <h2>Locations</h2>
+      <div class="loc-boxes">
+        <div class="downtown box">
+          <h3>Downtown</h3>
+          <p>384 West 4th St</p>
+          <p>Suite 108</p>
+          <p>Portland, Maine</p>
+        </div>
+        <div class="eastbayside box">
+          <h3>East Bayside</h3>
+          <p>3433 Phisherman's Avenue</p>
+          <p>(Northwest Corner)</p>
+          <p>Portland, Maine</p>
+        </div>
+        <div class="oakdale box">
+          <h3>Oakland</h3>
+          <p>515 Crescent Avenue</p>
+          <p>Second Floor</p>
+          <p>Portland, Maine</p>
+        </div>
+      </div>
+    </div>
+    <div class="contact">
+      <h2>The Tea Cozy</h2>
+      <h5>contact@theteacozy.com</h5>
+      <h5>917-555-8904</h5>
+    </div>
+    <div class="copy">
+      <h5>copyright The Tea Cozy 2017</h5>
+    </div>
   </body>
 </html>
